# combinationalcl

./: .gitignore  README.md  test_cl.cl
cpp/: .gitmodules  CMakeLists.txt
cpp/app/: combinationacl.cxx
cpp/include/: compiler.hpp  definitions.hpp  helper.hpp  parser.hpp  parser_adapt.hpp  vcd.hpp
cpp/src/: compiler.cxx  helper.cxx  parser.cxx
cpp/test/: CMakeLists.txt  test_kernel.cl  test_opencl.cxx  test_parse_vcd.cxx  vcd_nand.vcd
exec/: collect.py  compile.sh  ec2_amd_user_data.sh  ec2_collect.sh  ec2_nvidia_user_data.sh  ec2_user_data.sh  gcp_collect.sh  gcp_nvidia_user_data.sh  log.def.csv  run.sh
rust/: Cargo.toml
rust/src/: helper.rs  main.rs
